# QSchematic

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  license.txt  qschematic.pro  readme.md
.github/workflows/: ci.yml  ci.yml.disabled
code/: qschematics.pri  scene.cpp  scene.h  settings.cpp
code/items/: connector.cpp  connector.h  item.cpp  label.h  node.cpp  wire.h  wirenet.h  wirenetlabel.h  wirepoint.h
demo/: CMakeLists.txt  demo.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  resources.cpp
demo/commands/: CMakeLists.txt  commandnodeaddconnector.cpp  commandnodeaddconnector.h  commands.h  commands.hpp  node_add_connector.cpp  node_add_connector.h  node_add_connector.hpp
demo/common/: CMakeLists.txt  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
demo/items/: CMakeLists.txt  customitemfactory.cpp  customitemfactory.h  customitemfactory.hpp  fancywire.cpp  fancywire.h  fancywire.hpp  flowend.cpp  flowend.h  flowend.hpp  flowstart.cpp  flowstart.h  flowstart.hpp  itemtypes.h  itemtypes.hpp  operation.cpp  operation.h  operation.hpp  operationconnector.cpp  operationconnector.h  operationconnector.hpp  operationdemo1.cpp  operationdemo1.h  operationdemo1.hpp
demo/items/popup/: CMakeLists.txt  popup.cpp  popup.hpp  popup_connector.hpp  popup_operation.hpp
demo/items/widgets/: CMakeLists.txt  dial.cpp  dial.hpp  textedit.cpp  textedit.hpp
demo/itemslibrary/: iteminfo.h  itemslibrarymodel.cpp  itemslibrarymodel.h  itemslibrarymodelitem.h  itemslibraryview.cpp  itemsslibrarywidget.cpp  itemsslibrarywidget.h
demo/netlist/: CMakeLists.txt  model.cpp  model.h  model.hpp  view.cpp  view.h  viewer.cpp  viewer.h  viewer.hpp  widget.cpp  widget.h  widget.hpp
demo/netlistviewer/: netlistviewer.cpp  netlistviewer.h  netlistviewermodel.cpp  netlistviewermodel.h  netlistviewerview.cpp  netlistviewerview.h
demo/resources/: CMakeLists.txt  resources.qrc
demo/resources/examples/: demo_01.xml  examples.qrc
demo/resources/icons/: icons.qrc
demos/demo_01/application/: graph.pro  mainwindow.cpp  mainwindow.h  qschematic_demo.pro  resources.cpp  resources.h
demos/demo_01/application/commands/: commanditemvisibility.cpp  commanditemvisibility.h  commandlabelrename.cpp  commandlabelrename.h  commandnodeaddconnector.cpp  commandnodeaddconnector.h  commandnoderename.cpp  commandnoderename.h  commands.h
demos/demo_01/application/items/: condition.cpp  condition.h  conditionconnector.cpp  conditionconnector.h  customitemfactory.cpp  customitemfactory.h  fancywire.cpp  fancywire.h  flowend.cpp  flowend.h  flowstart.cpp  flowstart.h  itemtypes.h  (+8 more)
docs/: README.md
docs/uml/: model.mdj  readme.md
lib/: netlist.cpp  netlist.h  netlistgenerator.cpp  netlistgenerator.h  qschematic.pri  qschematics.pri  scene.cpp  scene.h  settings.cpp  settings.h  types.h  utils.cpp  utils.h  view.cpp  view.h
lib/commands/: commanditemadd.cpp  commanditemadd.h  commanditemmove.cpp  commanditemmove.h  commanditemremove.cpp  commanditemremove.h  commanditemsetvisible.cpp  commanditemsetvisible.h  commandlabelrename.cpp  commandlabelrename.h  commandnoderesize.cpp  commandnoderesize.h  commandnoderotate.cpp  commands.h
lib/interfaces/: json.h  xml.h
lib/items/: connector.cpp  connector.h  item.cpp  item.h  itemfactory.cpp  itemfactory.h  itemmimedata.h  label.cpp  label.h  line.cpp  line.h  node.cpp  node.h  splinewire.cpp  splinewire.h  wire.cpp  wire.h  wirenet.cpp  wirenet.h  wirenetlabel.cpp  wirepoint.cpp  wirepoint.h  wireroundedcorners.cpp  wireroundedcorners.h
qschematic/: CMakeLists.txt  LICENSE  QSchematicConfig.cmake  background.cpp  background.hpp  external.cmake  netlist.h  netlist.hpp  netlist_writer_json.h  netlist_writer_json.hpp  netlistgenerator.h  netlistgenerator.hpp  qschematic-config.cmake  qschematic-config.cmake.in  qschematic.pri  qschematic.pro  qschematic_license.txt  scene.cpp  scene.h  scene.hpp  settings.cpp  settings.h  settings.hpp  types.h  utils.cpp  utils.h  utils.hpp  view.cpp  view.h  view.hpp
qschematic/commands/: base.cpp  base.h  base.hpp  commandbase.cpp  commandbase.h  commanditemadd.cpp  commanditemadd.h  commanditemmove.cpp  commanditemmove.h  commanditemremove.cpp  commanditemremove.h  commanditemvisibility.cpp  commanditemvisibility.h  commandlabelrename.cpp  commandlabelrename.h  commandnoderesize.cpp  commandnoderesize.h  commandnoderotate.cpp  commandnoderotate.h  commandrectitemresize.cpp  commandrectitemresize.h  commandrectitemrotate.cpp  commandrectitemrotate.h  commands.h  commandwirenetrename.cpp  commandwirenetrename.h  commandwirepointmove.cpp  commandwirepointmove.h  item_add.cpp  item_add.h  item_add.hpp  item_move.cpp  item_move.h  item_move.hpp  item_remove.cpp  item_remove.h  item_remove.hpp  item_visibility.cpp  item_visibility.h  item_visibility.hpp  (+15 more)
qschematic/items/: bezierwire.cpp  bezierwire.hpp  connector.cpp  connector.h  connector.hpp  item.cpp  item.h  item.hpp  itemfactory.cpp  itemfactory.h  itemfactory.hpp  itemfunctions.h  itemfunctions.hpp  itemmimedata.cpp  itemmimedata.h  itemmimedata.hpp  label.cpp  label.h  label.hpp  line.cpp  line.h  node.cpp  node.h  node.hpp  rectitem.cpp  rectitem.h  rectitem.hpp  splinewire.cpp  splinewire.h  splinewire.hpp  subgraph.cpp  subgraph.h  widget.cpp  widget.h  widget.hpp  wire.cpp  wire.h  wire.hpp  wirenet.cpp  wirenet.h  (+5 more)
qschematic/utils/: itemscontainerutils.h  itemscontainerutils.hpp  itemscustodian.h  itemscustodian.hpp  sharedpointertracker.cpp  sharedpointertracker.h
qschematic/wire_system/: CMakeLists.txt  connectable.h  line.cpp  line.h  line.hpp  manager.cpp  manager.h  manager.hpp  net.cpp  net.h  net.hpp  point.cpp  point.h  point.hpp  wire.cpp  wire.h  wire.hpp
qschematic/wire_system/test/: CMakeLists.txt  CMakeLists.txt.in  connector.h  connector.hpp  test_main.cpp
qschematic/wire_system/test/tests/: line.cpp  manager.cpp  nets.cpp  wire.cpp
tools/cd/: FreeBSD-Clang.gocd.yaml  FreeBSD-GCC.gocd.yaml  MacOS-Clang.gocd.yaml  MacOS-GCC.gocd.yaml  QSchematic-FreeBSD-GCC.gocd.yaml  Ubuntu-Clang.gocd.yaml  Ubuntu-GCC.gocd.yaml
(+5 files in other folders)
